--- a/package.json
+++ b/package.json
@@ -8,23 +8,21 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "devextreme": "^21.2.6",
+    "devextreme-react": "^21.2.6",
+    "dompurify": "^2.3.6",
     "enzyme": "^3.11.0",
     "formik": "^2.2.9",
     "hotkeys-js": "^3.8.7",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-big-calendar": "^0.38.9",
     "react-bootstrap": "^2.1.2",
+    "react-commonmark": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
@@ -34,7 +32,14 @@
     "react-test-renderer": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
