--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-test-renderer": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
